# letterboxd-followbot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  notify.py  pyproject.toml  xyz.py
.github/workflows/: ci.yml
letterboxd_followbot/: config.py
letterboxd_followbot/database/: model.py
letterboxd_followbot/letterboxd/: api.py  ext.py
letterboxd_followbot/telegram/: util.py
